--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.56.2",
     "next": "14.2.10",
     "next-themes": "^0.3.0",
     "react": "^18",
